feat: add form work logic

--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -12,6 +12,7 @@
         class="journey-player__video"
         poster="./img/journey/poster0.webp"
         src="./video/journey.mp4"
+        
       ></video>
       <button class="journey-player__main-play-btn">
         <svg
@@ -62,7 +63,7 @@
             />
           </svg>
         </button>
-        <input class="journey-player__play-bar" type="range" max="100" min="0" value="0" />
+        <input class="journey-player__play-bar" type="range" max="100" min="0" value="0"></input>
         <button class="journey-player__volume-btn">
           <svg
             class="journey-player__volume-icon"
@@ -103,14 +104,7 @@
             />
           </svg>
         </button>
-        <input
-          class="journey-player__volume-bar"
-          type="range"
-          step="0.1"
-          min="0"
-          max="1"
-          value="0.2"
-        />
+        <input class="journey-player__volume-bar" type="range" min="0" max="1" step="0.1" value="0.2"></input>
         <button class="journey-player__fullscreen-btn">
           <svg
             class="journey-player__fullscreen-icon"
@@ -158,12 +152,18 @@
             ></iframe>
           </div>
           <div class="journey-slider__videos-item swiper-slide">
+            <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/zp1BXPX8jcU?rel=0&amp;mute=1" loading="lazy" allowfullscreen></iframe>
+          </div>
+          <div class="journey-slider__videos-item swiper-slide">
+            <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/Vi5D6FKhRmo?rel=0&amp;mute=1" loading="lazy" allowfullscreen></iframe>
+          </div>
+          <div class="journey-slider__videos-item swiper-slide">
             <iframe
               allowfullscreen
               class="slider-video"
               height="220"
               loading="lazy"
-              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1"
               width="380"
             ></iframe>
           </div>
@@ -173,80 +173,11 @@
               class="slider-video"
               height="220"
               loading="lazy"
-              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1"
               width="380"
             ></iframe>
           </div>
-          <div class="journey-slider__videos-item swiper-slide">
-            <iframe
-              allowfullscreen
-              class="slider-video"
-              height="220"
-              loading="lazy"
-              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
-              width="380"
-            ></iframe>
-          </div>
-          <div class="journey-slider__videos-item swiper-slide">
-            <iframe
-              allowfullscreen
-              class="slider-video"
-              height="220"
-              loading="lazy"
-              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
-              width="380"
-            ></iframe>
-          </div>
-          <div class="journey-slider__videos-item swiper-slide">
-            <iframe
-              allowfullscreen
-              class="slider-video"
-              height="220"
-              loading="lazy"
-              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
-              width="380"
-            ></iframe>
-          </div>
-          <div class="journey-slider__videos-item swiper-slide">
-            <iframe
-              allowfullscreen
-              class="slider-video"
-              height="220"
-              loading="lazy"
-              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
-              width="380"
-            ></iframe>
-          </div>
-          <div class="journey-slider__videos-item swiper-slide">
-            <iframe
-              allowfullscreen
-              class="slider-video"
-              height="220"
-              loading="lazy"
-              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
-              width="380"
-            ></iframe>
-          </div>
-          <div class="journey-slider__videos-item swiper-slide">
-            <iframe
-              allowfullscreen
-              class="slider-video"
-              height="220"
-              loading="lazy"
-              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
-              width="380"
-            ></iframe>
-          </div>
-          <div class="journey-slider__videos-item swiper-slide">
-            <iframe
-              allowfullscreen
-              class="slider-video"
-              height="220"
-              loading="lazy"
-              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
-              width="380"
-            ></iframe>
-          </div>
+         
         </div>
       </div>
       <div class="journey-slider__nav">
