--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -141,7 +141,7 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
@@ -153,7 +153,7 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
@@ -165,7 +165,7 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
@@ -177,7 +177,7 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
@@ -189,7 +189,7 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
@@ -201,7 +201,7 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
@@ -213,7 +213,7 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
@@ -225,7 +225,7 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
@@ -237,7 +237,7 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
@@ -249,7 +249,7 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
