--- a/src/scss/sections/main/tickets/_tickets.scss
+++ b/src/scss/sections/main/tickets/_tickets.scss
@@ -1,3 +1,12 @@
+#tickets-form-toggler {
+  display: none;
+  &:checked {
+    ~ .tickets-form {
+      transform: scale(1);
+    }
+  }
+}
+
 .tickets {
   width: 100%;
   height: 100%;
@@ -179,6 +188,7 @@
     font-size: 22px;
     text-align: center;
     white-space: nowrap;
+    cursor: pointer;
     transition-duration: 0.2s;
     @include media-breakpoint-up(md) {
       margin-top: 40px;
