feat: add upload image

--- a/src/html/includes/admin.html
+++ b/src/html/includes/admin.html
@@ -25,7 +25,7 @@
                 <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <tr class="admin__table-row">
+            <!-- <tr class="admin__table-row">
               <td class="admin__table-data">2</td>
               <td class="admin__table-data">User2131</td>
               <td class="admin__table-data">qwerty3131311234</td>
@@ -157,7 +157,7 @@
               <td class="admin__table-data admin__data-btn">
                 <span class="admin__btn-remove"></span>
               </td>
-            </tr>
+            </tr> -->
           </table>
         </div>
       </div>
