--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -149,7 +149,7 @@
                         Return
                       </td>
                     </tr>
-                    <tr class="profile-ticket-list__table-row">
+                    <!-- <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
@@ -256,7 +256,7 @@
                       <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
                         Return
                       </td>
-                    </tr>
+                    </tr> -->
                   </tbody>
                 </table>
               </div>
@@ -298,12 +298,12 @@
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">2022-01-01</td>
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
                     </tr>
-                    <tr class="profile-ticket-list__table-row">
+                    <!-- <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
                       <td class="profile-ticket-list__table-data">Basic</td>
@@ -320,7 +320,7 @@
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
-                    </tr>
+                    </tr> -->
                   </tbody>
                 </table>
               </div>
