feat: add some register logic

--- a/src/html/includes/login.html
+++ b/src/html/includes/login.html
@@ -50,7 +50,7 @@
         />
       </label>
       <div class="login__body-bottom">
-        <button class="login__btn-signin input-btn" type="submit">Sign in</button>
+        <a class="login__btn-signin input-btn" href="index.html">Sign in</a>
         <button class="login__btn-reset input-btn">Reset</button>
       </div>
       <span class="login__undertext-inner input-undertext-inner"
