--- a/src/scss/sections/main/_visiting.scss
+++ b/src/scss/sections/main/_visiting.scss
@@ -45,25 +45,39 @@
     flex-direction: column;
     justify-content: space-between;
   }
+
   &__card-link {
     overflow: hidden;
-    &:not(:hover) img {
-      transform: scale(1);
-      ~ .visiting__card-title {
-        &::after {
-          width: 70%;
-        }
-      }
-    }
-    &:hover img {
-      transform: scale(1.1);
-      ~ .visiting__card-title {
-        &::after {
-          width: 100%;
-        }
+  }
+
+  &__card-link:not(:hover) ~ & {
+    &__card-title {
+      &::after {
+        width: 70%;
       }
     }
   }
+
+  &__card-link:not(:hover) & {
+    &__card-img {
+      transform: scale(1);
+    }
+  }
+
+  &__card-link:hover ~ & {
+    &__card-title {
+      &::after {
+        width: 100%;
+      }
+    }
+  }
+
+  &__card-link:hover & {
+    &__card-img {
+      transform: scale(1.1);
+    }
+  }
+
   &__card-img {
     width: 100%;
     height: 100%;
@@ -82,6 +96,7 @@
       max-height: 180px;
     }
   }
+
   &__card-title {
     position: relative;
     font-family: var(--typography-fontFamily-headings);
@@ -105,12 +120,12 @@
       position: absolute;
       bottom: 0;
       left: 0;
-      width: 70%;
       height: 2px;
       background-color: var(--palette-primary-dark);
       transition: 0.4s;
     }
   }
+
   &__card-desc {
     margin-top: 10px;
     font-weight: var(--typography-fontWeightLight);
