--- a/src/scss/sections/_login.scss
+++ b/src/scss/sections/_login.scss
@@ -15,13 +15,10 @@
     width: 100%;
     margin-top: 40px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
   }
   &__btn-signin {
     background-color: var(--palette-primary-main);
-  }
-  &__btn-reset {
-    background-color: var(--palette-primary-dark);
   }
 }
