feat: some fixes

--- a/src/html/includes/admin.html
+++ b/src/html/includes/admin.html
@@ -25,180 +25,23 @@
                 <span class="admin__btn-remove"></span>
               </td>
             </tr>
-            <!-- <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr>
-            <tr class="admin__table-row">
-              <td class="admin__table-data">2</td>
-              <td class="admin__table-data">User2131</td>
-              <td class="admin__table-data">qwerty3131311234</td>
-              <td class="admin__table-data">user31312@mail.ru</td>
-              <td class="admin__table-data">+375339999999</td>
-
-              <td class="admin__table-data admin__data-btn">
-                <span class="admin__btn-remove"></span>
-              </td>
-            </tr> -->
           </table>
         </div>
       </div>
       <div class="admin-tickets admin-edit-ticket">
         <h2 class="admin__users-title">Ticket</h2>
-        <form action="" class="admin-tickets__body">
+        <form id="admin-form" action="" class="admin-tickets__body">
           <div class="admin-tickets__data">
             <span class="admin-tickets__data-title">Edit date</span>
-            <ul class="admin-tickets__list">
-              <li class="admin-tickets__list-item">
-                <input class="admin-tickets__data-value" type="date" value="2022-01-01" />
-                <span class="admin__btn-remove"></span>
-              </li>
-              <li class="admin-tickets__list-item">
-                <input class="admin-tickets__data-value" type="date" value="2022-01-01" />
-                <span class="admin__btn-remove"></span>
-              </li>
-              <li class="admin-tickets__list-item">
-                <input class="admin-tickets__data-value" type="date" value="2022-01-01" />
-                <span class="admin__btn-remove"></span>
-              </li>
-            </ul>
-            <button class="admin-tickets__data-add" type="submit">ADD</button>
+            <ul id="admin-date-list" class="admin-tickets__list"></ul>
+            <input id="select-date-field" class="admin-tickets__data-value" type="date" value="" />
+            <button id="btn-add-date" class="admin-tickets__data-add" type="submit">ADD</button>
           </div>
           <div class="admin-tickets__data">
             <span class="admin-tickets__data-title">Edit time</span>
-            <ul class="admin-tickets__list">
-              <li class="admin-tickets__list-item">
-                <input class="admin-tickets__data-value" type="time" value="12:12" />
-                <span class="admin__btn-remove"></span>
-              </li>
-              <li class="admin-tickets__list-item">
-                <input class="admin-tickets__data-value" type="time" value="12:12" />
-                <span class="admin__btn-remove"></span>
-              </li>
-              <li class="admin-tickets__list-item">
-                <input class="admin-tickets__data-value" type="time" value="12:12" />
-                <span class="admin__btn-remove"></span>
-              </li>
-            </ul>
-            <button class="admin-tickets__data-add" type="submit">ADD</button>
+            <ul id="admin-time-list" class="admin-tickets__list"></ul>
+            <input id="select-time-field" class="admin-tickets__data-value" type="time" value="" />
+            <button id="btn-add-time" class="admin-tickets__data-add" type="submit">ADD</button>
           </div>
           <div class="admin-tickets__data">
             <span class="admin-tickets__data-title">Edit price</span>
@@ -222,6 +65,9 @@
                 />
               </label>
             </div>
+            <button id="btn-update-price" class="admin-tickets__data-add" type="submit">
+              Submit
+            </button>
           </div>
         </form>
       </div>
