--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -149,18 +149,6 @@
                         Return
                       </td>
                     </tr>
-                    <!-- <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
-                        Return
-                      </td>
-                    </tr>
                     <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
                       <td class="profile-ticket-list__table-data">Temporary exhibition</td>
@@ -185,78 +173,6 @@
                         Return
                       </td>
                     </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
-                        Return
-                      </td>
-                    </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
-                        Return
-                      </td>
-                    </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
-                        Return
-                      </td>
-                    </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
-                        Return
-                      </td>
-                    </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
-                        Return
-                      </td>
-                    </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
-                        Return
-                      </td>
-                    </tr> -->
                   </tbody>
                 </table>
               </div>
@@ -283,7 +199,7 @@
           <div class="profile-returned-list">
             <div class="profile-ticket-list__container">
               <div class="profile-ticket-list__table-container">
-                <table class="profile-ticket-list__table">
+                <table id="returned-list" class="profile-ticket-list__table">
                   <tbody>
                     <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">№</td>
@@ -294,33 +210,6 @@
                       <td class="profile-ticket-list__table-data">Amount</td>
                       <td class="profile-ticket-list__table-data">Price(€)</td>
                     </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                    </tr>
-                    <!-- <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                    </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                    </tr> -->
                   </tbody>
                 </table>
               </div>
