--- a/src/scss/sections/_admin.scss
+++ b/src/scss/sections/_admin.scss
@@ -155,12 +155,13 @@
     &__data {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: flex-start;
       width: 100%;
       max-width: 300px;
-      border-right: 1px solid var(--palette-primary-main);
-      border-bottom: 1px solid var(--palette-primary-main);
-      border-left: 1px solid var(--palette-primary-main);
+      border: 1px solid var(--palette-primary-main);
+      &:last-child {
+        border: none;
+      }
     }
 
     &__data-title {
@@ -176,13 +177,14 @@
         font-size: 16px;
       }
     }
-
+    &__list {
+    }
     &__list-item {
       display: flex;
       align-items: center;
       justify-content: space-between;
       max-width: 400px;
-      padding: 10px;
+      padding-right: 10px;
       gap: 20px;
     }
 
@@ -192,6 +194,7 @@
       display: flex;
       flex: 1 0 auto;
       color: var(--palette-secondary-text);
+      padding: 10px;
     }
 
     &__data-add {
@@ -221,10 +224,13 @@
 
     &__price-container {
       display: flex;
-      flex: 1 1 auto;
+      flex: 1 0 auto;
       flex-direction: column;
       padding: 10px;
       gap: 10px;
+      max-height: 150px;
+      border-left: 1px solid var(--palette-primary-main);
+      border-right: 1px solid var(--palette-primary-main);
     }
 
     &__price-inner {
