--- a/src/scss/sections/_admin.scss
+++ b/src/scss/sections/_admin.scss
@@ -57,6 +57,8 @@
       z-index: 3;
       top: 0;
       left: 0;
+    }
+    &--heading {
       background-color: var(--palette-primary-main);
       .admin__table-data {
         color: var(--palette-primary-text);
