--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -88,17 +88,6 @@
             pattern="[0-9]{10,12}"
           />
         </label>
-        <form class="profile__comment">
-          <span class="profile__comment-title">Give feedback</span>
-          <textarea
-            class="profile__comment-field"
-            cols="30"
-            id=""
-            name=""
-            placeholder="Write something..."
-          ></textarea>
-          <button class="profile__comment-btn" type="submit">Send</button>
-        </form>
       </div>
       <div class="profile-center">
         <span class="profile-center__title">Tickets</span>
@@ -125,53 +114,19 @@
           <form action="" class="profile-ticket-list">
             <div class="profile-ticket-list__container">
               <div class="profile-ticket-list__table-container">
-                <table class="profile-ticket-list__table">
+                <table id="user-ticket-list" class="profile-ticket-list__table">
                   <tbody>
-                    <tr class="profile-ticket-list__table-row">
+                    <tr
+                      class="profile-ticket-list__table-row profile-ticket-list__table-row--heading"
+                    >
                       <td class="profile-ticket-list__table-data">№</td>
                       <td class="profile-ticket-list__table-data">Type</td>
                       <td class="profile-ticket-list__table-data">Age(Discount)</td>
                       <td class="profile-ticket-list__table-data">Date</td>
                       <td class="profile-ticket-list__table-data">Time</td>
                       <td class="profile-ticket-list__table-data">Amount</td>
-                      <td class="profile-ticket-list__table-data">Price(€)</td>
+                      <!-- <td class="profile-ticket-list__table-data">Price(€)</td> -->
                       <td class="profile-ticket-list__table-data">Return ticket</td>
-                    </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
-                        Return
-                      </td>
-                    </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
-                        Return
-                      </td>
-                    </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">2022-01-01</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
-                        Return
-                      </td>
                     </tr>
                   </tbody>
                 </table>
@@ -201,7 +156,9 @@
               <div class="profile-ticket-list__table-container">
                 <table id="returned-list" class="profile-ticket-list__table">
                   <tbody>
-                    <tr class="profile-ticket-list__table-row">
+                    <tr
+                      class="profile-ticket-list__table-row profile-ticket-list__table-row--heading"
+                    >
                       <td class="profile-ticket-list__table-data">№</td>
                       <td class="profile-ticket-list__table-data">Type</td>
                       <td class="profile-ticket-list__table-data">Age(Discount)</td>
